feat: after creating repository on the behalf of the user, the user page will be automatically updated without reload